[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sre-incident-response"
version = "1.0.0"
description = "SRE Incident Response OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "openai>=1.30.1",
    "requests>=2.32.2",
    "pyyaml>=6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:app"

[project.entry-points."openenv.envs"]
sre-incident-response = "env.environment:SREEnvironment"